--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "gulp-watch": "^4.3.8",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
-    "resolve": "^1.1.7"
+    "resolve": "^1.1.7",
+    "gulp-jasmine": "^2.4.0",
+    "jasmine": "^2.4.1",
+    "jasmine-spec-reporter": "^2.5.0"
   },
   "dependencies": {
     "browserify": "^13.0.1",
